--- a/fcm-scheduler/package.json
+++ b/fcm-scheduler/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "firebase-admin": "^13.1.0",
+    "fs": "^0.0.1-security",
     "node-schedule": "^2.1.1"
   }
 }
